crates/oopsie/tests/snapshots/report__report_with_spantrace_serde_stable_aarch64-apple-darwin.snap
---
source: crates/oopsie/tests/report.rs
expression: report
---
Error[report::common::MyError::Inner]: Inner error happened
  at crates/oopsie/tests/common/mod.rs:[LOC]
  ╰─▶ Error: Inner function failed (foo=true, name=Alice)

━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ SPANTRACE ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
  1: sys::inner_function
           with {"foo":true,"id":42,"name":"Alice"}
           at crates/oopsie/tests/common/mod.rs:[LOC]
  2: controller::outer_function
           with {"foo":true,"name":"Alice"}
           at crates/oopsie/tests/common/mod.rs:[LOC]

━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ BACKTRACE ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
   ... 10 frames hidden ...
  1: report::common::make_error::inner_function::h[HASH]
           at tests/common/mod.rs:[LOC]
  2: report::common::make_error::outer_function::h[HASH]
           at tests/common/mod.rs:[LOC]
  3: report::common::make_error::h[HASH]
           at tests/common/mod.rs:[LOC]
  4: report::test_report_with_spantrace_serde::h[HASH]
           at tests/report.rs:[LOC]
  5: report::test_report_with_spantrace_serde::{{closure}}::h[HASH]
           at tests/report.rs:[LOC]
   ... 22 frames hidden ...
