crates/oopsie/tests/snapshots/report__report_with_spantrace_stable.snap
---
source: crates/oopsie/tests/report.rs
expression: report
---
Error[report::common::MyError::Inner]: Inner error happened
  ╰─▶ Error: Inner function failed (foo=true, name=Alice)

━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ SPANTRACE ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
   0: sys::inner_function
           with {"foo":true,"id":42,"name":"Alice"}
             at crates/oopsie/tests/common/mod.rs:[LOC]
   1: controller::outer_function
           with {"foo":true,"name":"Alice"}
             at crates/oopsie/tests/common/mod.rs:[LOC]
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ BACKTRACE ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
  1: capture
           at [CRATE_DIR]-core/src/backtrace.rs:[LOC]
  2: capture<oopsie_core::backtrace::Backtrace, oopsie_core::spantrace::SpanTrace>
           at [CRATE_DIR]-core/src/traits.rs:[LOC]
  3: capture<(oopsie_core::backtrace::Backtrace, oopsie_core::spantrace::SpanTrace)>
           at [CRATE_DIR]-core/src/traits.rs:[LOC]
  4: build<alloc::string::String>
           at [CRATE_DIR]/tests/common/mod.rs:[LOC]
  5: fail<alloc::string::String, ()>
           at [CRATE_DIR]/tests/common/mod.rs:[LOC]
  6: inner_function
           at [CRATE_DIR]/tests/common/mod.rs:[LOC]
  7: outer_function
           at [CRATE_DIR]/tests/common/mod.rs:[LOC]
  8: make_error
           at [CRATE_DIR]/tests/common/mod.rs:[LOC]
  9: test_report_with_spantrace
           at [CRATE_DIR]/tests/report.rs:[LOC]
 10: {closure}
           at [CRATE_DIR]/tests/report.rs:[LOC]
 11: call_once<report::test_report_with_spantrace::{closure_env#0}, ()>
           at [STDLIB]/library/core/src/ops/function.rs:[LOC]
 12: <fn() -> core::result::Result<(), alloc::string::String> as core::ops::function::FnOnce>::call_once
           at [STDLIB]/library/core/src/ops/function.rs:[LOC]
 13: test::__rust_begin_short_backtrace::<core::result::Result<(), alloc::string::String>, fn() -> core::result::Result<(), alloc::string::String>>
           at [STDLIB]/library/test/src/lib.rs:[LOC]
 14: test::run_test_in_process::{closure}
           at [STDLIB]/library/test/src/lib.rs:[LOC]
 15: <core::panic::unwind_safe::AssertUnwindSafe<test::run_test_in_process::{closure}> as core::ops::function::FnOnce>::call_once
           at [STDLIB]/library/core/src/panic/unwind_safe.rs:[LOC]
 16: std::panicking::catch_unwind::do_call::<core::panic::unwind_safe::AssertUnwindSafe<test::run_test_in_process::{closure}>, core::result::Result<(), alloc::string::String>>
           at [STDLIB]/library/std/src/panicking.rs:[LOC]
 17: std::panicking::catch_unwind::<core::result::Result<(), alloc::string::String>, core::panic::unwind_safe::AssertUnwindSafe<test::run_test_in_process::{closure}>>
           at [STDLIB]/library/std/src/panicking.rs:[LOC]
 18: std::panic::catch_unwind::<core::panic::unwind_safe::AssertUnwindSafe<test::run_test_in_process::{closure}>, core::result::Result<(), alloc::string::String>>
           at [STDLIB]/library/std/src/panic.rs:[LOC]
 19: test::run_test_in_process
           at [STDLIB]/library/test/src/lib.rs:[LOC]
 20: test::run_test::{closure}
           at [STDLIB]/library/test/src/lib.rs:[LOC]
 21: test::run_test::{closure}
           at [STDLIB]/library/test/src/lib.rs:[LOC]
 22: std::sys::backtrace::__rust_begin_short_backtrace::<test::run_test::{closure}, ()>
           at [STDLIB]/library/std/src/sys/backtrace.rs:[LOC]
 23: std::thread::lifecycle::spawn_unchecked::<test::run_test::{closure}, ()>::{closure}::{closure}
           at [STDLIB]/library/std/src/thread/lifecycle.rs:[LOC]
 24: <core::panic::unwind_safe::AssertUnwindSafe<std::thread::lifecycle::spawn_unchecked<test::run_test::{closure}, ()>::{closure}::{closure}> as core::ops::function::FnOnce>::call_once
           at [STDLIB]/library/core/src/panic/unwind_safe.rs:[LOC]
 25: std::panicking::catch_unwind::do_call::<core::panic::unwind_safe::AssertUnwindSafe<std::thread::lifecycle::spawn_unchecked<test::run_test::{closure}, ()>::{closure}::{closure}>, ()>
           at [STDLIB]/library/std/src/panicking.rs:[LOC]
 26: std::panicking::catch_unwind::<(), core::panic::unwind_safe::AssertUnwindSafe<std::thread::lifecycle::spawn_unchecked<test::run_test::{closure}, ()>::{closure}::{closure}>>
           at [STDLIB]/library/std/src/panicking.rs:[LOC]
 27: std::panic::catch_unwind::<core::panic::unwind_safe::AssertUnwindSafe<std::thread::lifecycle::spawn_unchecked<test::run_test::{closure}, ()>::{closure}::{closure}>, ()>
           at [STDLIB]/library/std/src/panic.rs:[LOC]
 28: std::thread::lifecycle::spawn_unchecked::<test::run_test::{closure}, ()>::{closure}
           at [STDLIB]/library/std/src/thread/lifecycle.rs:[LOC]
 29: <std::thread::lifecycle::spawn_unchecked<test::run_test::{closure}, ()>::{closure} as core::ops::function::FnOnce>::call_once::{shim:vtable#0}
           at [STDLIB]/library/core/src/ops/function.rs:[LOC]
 30: <alloc::boxed::Box<dyn core::ops::function::FnOnce<(), Output = ()> + core::marker::Send> as core::ops::function::FnOnce>::call_once
           at [STDLIB]/library/alloc/src/boxed.rs:[LOC]
 31: <std::sys::thread::unix::Thread>::new::thread_start
           at [STDLIB]/library/std/src/sys/thread/unix.rs:[LOC]
