crates/oopsie/tests/snapshots/report__report_with_spantrace_stable_aarch64-apple-darwin.snap
---
source: crates/oopsie/tests/report.rs
expression: report
---
Error[report::common::MyError::Inner]: Inner error happened
  ╰─▶ Error: Inner function failed (foo=true, name=Alice)

━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ SPANTRACE ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
  1: sys::inner_function
           with {"foo":true,"id":42,"name":"Alice"}
           at crates/oopsie/tests/common/mod.rs:[LOC]
  2: controller::outer_function
           with {"foo":true,"name":"Alice"}
           at crates/oopsie/tests/common/mod.rs:[LOC]

━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ BACKTRACE ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
   ... 8 frames hidden ...
  1: report::common::MyErrorInnerOopsie<__T0>::build::h[HASH]
           at [WORKSPACE]/crates/oopsie/tests/common/mod.rs:[LOC]
  2: report::common::MyErrorInnerOopsie<__T0>::fail::h[HASH]
           at [WORKSPACE]/crates/oopsie/tests/common/mod.rs:[LOC]
  3: report::common::make_error::inner_function::h[HASH]
           at [WORKSPACE]/crates/oopsie/tests/common/mod.rs:[LOC]
  4: report::common::make_error::outer_function::h[HASH]
           at [WORKSPACE]/crates/oopsie/tests/common/mod.rs:[LOC]
  5: report::common::make_error::h[HASH]
           at [WORKSPACE]/crates/oopsie/tests/common/mod.rs:[LOC]
  6: report::test_report_with_spantrace::h[HASH]
           at [WORKSPACE]/crates/oopsie/tests/report.rs:[LOC]
  7: report::test_report_with_spantrace::{{closure}}::h[HASH]
           at [WORKSPACE]/crates/oopsie/tests/report.rs:[LOC]
   ... 22 frames hidden ...
