crates/oopsie/tests/snapshots/report__report_with_spantrace_unstable_aarch64-apple-darwin.snap
---
source: crates/oopsie/tests/report.rs
expression: report
---
Error[report::common::MyError::Inner]: Inner error happened
  ╰─▶ Error: Inner function failed (foo=true, name=Alice)

━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ SPANTRACE ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
  1: sys::inner_function
           with {"foo":true,"id":42,"name":"Alice"}
           at crates/oopsie/tests/common/mod.rs:[LOC]
  2: controller::outer_function
           with {"foo":true,"name":"Alice"}
           at crates/oopsie/tests/common/mod.rs:[LOC]

━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ BACKTRACE ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
   ... 8 frames hidden ...
  1: <report[[HASH]]::common::my_error_inner_oopsies::MyErrorInner<alloc[[HASH]]::string::String>>::build
           at [WORKSPACE]/crates/oopsie/tests/common/mod.rs:[LOC]
  2: <report[[HASH]]::common::my_error_inner_oopsies::MyErrorInner<alloc[[HASH]]::string::String>>::fail::<()>
           at [WORKSPACE]/crates/oopsie/tests/common/mod.rs:[LOC]
  3: report[[HASH]]::common::make_error::inner_function
           at [WORKSPACE]/crates/oopsie/tests/common/mod.rs:[LOC]
  4: report[[HASH]]::common::make_error::outer_function
           at [WORKSPACE]/crates/oopsie/tests/common/mod.rs:[LOC]
  5: report[[HASH]]::common::make_error
           at [WORKSPACE]/crates/oopsie/tests/common/mod.rs:[LOC]
  6: report[[HASH]]::test_report_with_spantrace
           at [WORKSPACE]/crates/oopsie/tests/report.rs:[LOC]
  7: report[[HASH]]::test_report_with_spantrace::{closure#0}
           at [WORKSPACE]/crates/oopsie/tests/report.rs:[LOC]
   ... 22 frames hidden ...
